Review Request 2069: fix completion times spacing issues on job status page

--- a/le-ui/projects/prospectdiscovery/app/jobs/status/StatusStyles.scss
+++ b/le-ui/projects/prospectdiscovery/app/jobs/status/StatusStyles.scss
@@ -22,6 +22,11 @@
 
 .chevron-row {
     text-align: center;
+    
+    .completion-times span {
+        display: inline-block;
+        width: 191px;
+    }
 }
 .breadcrumb {
     /*centering*/
